CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(twd C)

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
ENDIF (NOT CMAKE_BUILD_TYPE)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
SET(Iconv_FIND_REQUIRED)
FIND_PACKAGE(Iconv)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -pedantic -g")
SET(CMAKE_C_FLAGS_DEBUG "-DDEBUG")

IF(APPLE)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-common")
ELSE(APPLE)
  SET(CMAKE_C_FLAGS "-std=c99 ${CMAKE_C_FLAGS}")
ENDIF(APPLE)


SET(COMMON dscp.c parse_addr.c)
SET(HEADERS dscp.h parse_addr.h twd.h)
SET(LIBS ${ICONV_LIBRARIES} rt)

ADD_EXECUTABLE(twd twd.c ${HEADERS} ${COMMON})
ADD_EXECUTABLE(test_clock test_clock.c ${HEADERS} ${COMMON})
TARGET_LINK_LIBRARIES(twd ${LIBS})
TARGET_LINK_LIBRARIES(test_clock ${LIBS})

